fix and align button 2

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ ul{
     border-radius: 10px;;
     display:flex;
     justify-content: space-between;
+    align-items: center;
     flex-shrink: 0;
 }
 
@@ -186,6 +187,7 @@ ul{
     font-weight: bold;
     padding:5px;
     width:8rem;
+    height:2rem;
     color:white;
     background-color:#3882F6;
     border-color:#F9FAF8;
